@@ -19,7 +19,7 @@ In addition, the total I/O bandwidth read and written during the sampling
 period is displayed at the top of the interface.
 .PP
 Use the left and right arrows to change the sorting, r to reverse the
-sorting order, o to toggle the \-\-only option, p to toggle the \-\-processes option, a to toggle the \-\-accumulated option or q to quit. Any other key will force a refresh.
+sorting order, o to toggle the \-\-only option, p to toggle the \-\-processes option, a to toggle the \-\-accumulated option, q to quit or i to change the priority of a thread or a process' thread(s). Any other key will force a refresh.
 .SH OPTIONS
 .TP
 \fB\-\-version\fR
@@ -77,6 +77,7 @@ the I/O summary is never printed.
 .PD 1
 .RE
 .SH SEE ALSO
+.BR ionice (1),
 .BR top (1),
 .BR vmstat (1)
 .SH AUTHOR
