@@ -5,7 +5,7 @@ import platform
 import time
 
 # From http://git.kernel.org/?p=utils/util-linux-ng/util-linux-ng.git;a=blob;
-#      f=configure.ac;h=770eb45ae85d32757fc3cff1d70a7808a627f9f7;hb=HEAD#l363
+#      f=configure.ac;h=770eb45ae85d32757fc3cff1d70a7808a627f9f7;hb=HEAD#l354
 # i386 bit userspace under an x86_64 kernel will have its uname() appear as
 # 'x86_64' but it will use the i386 syscall number, that's why we consider both
 # the architecture name and the word size.
@@ -21,25 +21,56 @@ IOPRIO_GET_ARCH_SYSCALL = [
     ('x86_64*', '64bit',  252),
 ]
 
-def find_ioprio_get_syscall_number():
+IOPRIO_SET_ARCH_SYSCALL = [
+    ('alpha',       '*',  442),
+    ('i*86',        '*',  289),
+    ('ia64*',       '*', 1274),
+    ('powerpc*',    '*',  273),
+    ('s390*',       '*',  282),
+    ('sparc*',      '*',  196),
+    ('sh*',         '*',  288),
+    ('x86_64*',  '32bit', 289),
+    ('x86_64*',  '64bit', 251),
+]
+
+def find_ioprio_syscall_number(syscall_list):
     arch = os.uname()[4]
     bits = platform.architecture()[0]
 
-    for candidate_arch, candidate_bits, syscall_nr in IOPRIO_GET_ARCH_SYSCALL:
+    for candidate_arch, candidate_bits, syscall_nr in syscall_list:
         if fnmatch.fnmatch(arch, candidate_arch) and \
            fnmatch.fnmatch(bits, candidate_bits):
             return syscall_nr
 
+class IoprioSetError(Exception):
+    def __init__(self, err):
+        try:
+            self.err = os.strerror(err)
+        except TypeError:
+            self.err = err
 
-__NR_ioprio_get = find_ioprio_get_syscall_number()
-ctypes_handle = ctypes.CDLL(None)
+__NR_ioprio_get = find_ioprio_syscall_number(IOPRIO_GET_ARCH_SYSCALL)
+__NR_ioprio_set = find_ioprio_syscall_number(IOPRIO_SET_ARCH_SYSCALL)
+
+try:
+    ctypes_handle = ctypes.CDLL(None, use_errno=True)
+except TypeError:
+    ctypes_handle = ctypes.CDLL(None)
+
 syscall = ctypes_handle.syscall
 
-PRIORITY_CLASSES = (None, 'rt', 'be', 'idle')
+PRIORITY_CLASSES = [None, 'rt', 'be', 'idle']
 
-WHO_PROCESS = 1
+IOPRIO_WHO_PROCESS = 1
 IOPRIO_CLASS_SHIFT = 13
 IOPRIO_PRIO_MASK = (1 << IOPRIO_CLASS_SHIFT) - 1
+
+def ioprio_value(ioprio_class, ioprio_data):
+    try:
+        ioprio_class = PRIORITY_CLASSES.index(ioprio_class)
+    except ValueError:
+        ioprio_class = PRIORITY_CLASSES.index(None)
+    return (ioprio_class << IOPRIO_CLASS_SHIFT) | ioprio_data
 
 def ioprio_class(ioprio):
     return PRIORITY_CLASSES[ioprio >> IOPRIO_CLASS_SHIFT]
@@ -69,7 +100,7 @@ def get(pid):
     if __NR_ioprio_get is None:
         return '?sys'
 
-    ioprio = syscall(__NR_ioprio_get, WHO_PROCESS, pid)
+    ioprio = syscall(__NR_ioprio_get, IOPRIO_WHO_PROCESS, pid)
     if ioprio < 0:
         return '?err'
 
@@ -79,6 +110,19 @@ def get(pid):
     if prio_class == 'idle':
         return prio_class
     return '%s/%d' % (prio_class, ioprio_data(ioprio))
+
+def set_ioprio(which, who, ioprio_class, ioprio_data):
+    if __NR_ioprio_set is None:
+        raise IoprioSetError('No ioprio_set syscall found')
+
+    ioprio_val = ioprio_value(ioprio_class, ioprio_data)
+    ret = syscall(__NR_ioprio_set, which, who, ioprio_val, use_errno=True)
+    if ret < 0:
+        try:
+            err = ctypes.get_errno()
+        except AttributeError:
+            err = 'Unknown error (errno support not available before Python2.6)'
+        raise IoprioSetError(err)
 
 def sort_key(key):
     if key[0] == '?':
@@ -95,6 +139,14 @@ def sort_key(key):
         prio = 0
 
     return (1 << (shift * IOPRIO_CLASS_SHIFT)) + prio
+
+def to_class_and_data(ioprio_str):
+    if '/' in ioprio_str:
+        split = ioprio_str.split('/')
+        return (split[0], int(split[1]))
+    elif ioprio_str == 'idle':
+        return ('idle', 0)
+    return (None, None)
 
 if __name__ == '__main__':
     import sys
